--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,274 +1,190 @@
-/* Reset CSS */
-html,
+a,
+article,
+aside,
+audio,
+b,
+blockquote,
 body,
+canvas,
+caption,
+center,
+dd,
+details,
 div,
-span,
-applet,
-object,
-iframe,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
+header,
+hgroup,
+html,
+i,
+iframe,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+p,
+pre,
+section,
 small,
+span,
 strike,
 strong,
 sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
 summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
 time,
-mark,
-audio,
+tr,
+tt,
+u,
+ul,
 video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-weight: 400;
   vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
   list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote::before,
-blockquote::after,
-q::before,
-q::after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* Base CSS */
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  color: #333;
-  background-color: #fff;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-p {
-  margin-bottom: 1rem;
-}
-
-a {
-  color: #007bff;
   text-decoration: none;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
-
-a:hover,
-a:focus {
-  text-decoration: underline;
-  color: #0056b3;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  -webkit-tap-highlight-color: transparent;
 }
-
+:after,
+:before {
+  box-sizing: border-box;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+  outline: 0;
+}
 img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   display: block;
 }
-
-button {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  margin: 0;
-  border: none;
-  padding: 0.5rem 1rem;
-  background-color: #007bff;
-  color: #fff;
+:focus {
+  outline: 0;
+  box-shadow: none;
+}
+a:hover {
   cursor: pointer;
-  border-radius: 0.25rem;
 }
-
-button:hover,
-button:focus {
-  background-color: #0056b3;
-}
-
+button,
 input,
 textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  border-radius: 0;
+  line-height: normal;
+  outline: 0;
+  box-shadow: none;
+  border: none;
   font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+  font-weight: inherit;
+}
+button {
+  display: inline-block;
+  cursor: pointer;
+  border: none;
+}
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+input[type="submit"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
+}
+a:focus,
+a:hover,
+button:focus,
+button:hover,
+textarea:focus {
+  outline: 0;
+  cursor: pointer;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
   margin: 0;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 0.25rem;
+}
+ul {
+  list-style: none;
+}
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  height: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+html {
+  scroll-padding-top: 195px;
+}
+@font-face {
+  font-family: "inter-bold";
+  font-weight: 700;
+  src: url("./../fonts/Inter-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: "inter";
+  font-weight: 400;
+  src: url("./../fonts/Inter-Regular.woff") format("woff");
 }
 
-input:focus,
-textarea:focus {
-  border-color: #007bff;
-  outline: none;
+body {
+  font-family: "MyCustomFont", sans-serif;
+}
+body {
+  font-family: "inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  color: #2f7c72;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  height: 100%;
+  background: #ffffff;
+  transition: all 0.3s;
 }
 
 .container {
-  width: 100%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
-  padding: 0 1rem;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -1rem 0;
-}
-
-.col {
-  flex: 1;
-  padding: 1rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-.mt-2 {
-  margin-top: 2rem;
-}
-.mt-3 {
-  margin-top: 3rem;
-}
-.mb-1 {
-  margin-bottom: 1rem;
-}
-.mb-2 {
-  margin-bottom: 2rem;
-}
-.mb-3 {
-  margin-bottom: 3rem;
-}
-
-.pt-1 {
-  padding-top: 1rem;
-}
-.pt-2 {
-  padding-top: 2rem;
-}
-.pt-3 {
-  padding-top: 3rem;
-}
-.pb-1 {
-  padding-bottom: 1rem;
-}
-.pb-2 {
-  padding-bottom: 2rem;
-}
-.pb-3 {
-  padding-bottom: 3rem;
+  padding: 0 16px;
+  width: 100%;
+  position: relative;
 }
