--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -143,3 +143,14 @@ header nav button {
   background: #529471;
   color: #fff;
 }
+.services{padding: 40px 0 80px 0;}
+.services h2{font-size: 36px; line-height: 38px; text-align: center;margin: 0 0 10px 0;}
+.services p{font-size: 28px; line-height: 36px; text-align: center;margin: 0 0 44px 0;}
+.services ul{display: flex;align-items: center;justify-content: space-between;}
+.services ul li{font-size: 26px; line-height: 32px;text-align: center;}
+
+.about .heading{font-size: 36px; line-height: 38px; text-align: center;margin: 0 0 44px 0;}
+.about .list-wrap{display: flex; margin: 0 -18px;flex-wrap: wrap;justify-content: center;}
+.about .list-wrap .list-item{flex: 1 0 auto; width: 100%; max-width: 33.3333%; display: flex; flex-direction: column; align-items: center;justify-content: space-between; padding: 0 18px;margin: 0 0 20px 0;}
+
+.about .list-wrap .list-item .desc { font-size: 18px; line-height: 28px;text-align: center; }
