--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -24,7 +24,7 @@ header nav {
 }
 
 header nav .logo-wrap {
-  max-width: 320px;
+  max-width: 254px;
 }
 
 header nav button {
@@ -161,7 +161,7 @@ header nav button {
 .banner .form-wrap .submit_button {
   width: 100%;
   padding: 10px;
-  font-size: 28px;
+  font-size: 2.4rem;
   border-radius: 50px;
   background: #529471;
   color: #fff;
