--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -176,6 +176,8 @@ body {
   height: 100%;
   background: #ffffff;
   transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -185,4 +187,7 @@ body {
   width: 100%;
   position: relative;
   overflow: hidden;
+}
+.main-wrap {
+  flex: 1 0 auto;
 }
