--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -14,6 +14,14 @@
   text-align: center;
   margin: 0 0 40px 0;
 }
+@media only screen and (max-width: 767px) {
+  .section .heading {
+    font-size: 2.6rem;
+  }
+  .section .sub-heading {
+    font-size: 1.6rem;
+  }
+}
 /* common */
 
 /* header */
@@ -36,6 +44,12 @@ header nav button {
   border-radius: 50px;
   font-size: 24px;
   font-weight: 700;
+}
+@media only screen and (max-width: 767px) {
+  header nav .logo-wrap {
+    margin: 0 auto;
+    max-width: 200px;
+  }
 }
 /* header */
 
@@ -70,6 +84,7 @@ header nav button {
   display: flex;
   align-items: center;
   padding: 40px 16px;
+  gap: 30px;
 }
 .banner .left-wrap .title {
   max-width: 615px;
@@ -166,6 +181,42 @@ header nav button {
   background: #529471;
   color: #fff;
 }
+
+@media only screen and (max-width: 767px) {
+  .banner .container {
+    padding: 20px 16px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .banner-bg {
+    background-image: linear-gradient(180deg, #ffffffe6 0% 50%, #0000 65%),
+      url(./../images/banner.jpg);
+    background-position: top;
+  }
+  .banner .left-wrap .title {
+    font-size: 2.6rem;
+  }
+  .banner .left-wrap .desc {
+    font-size: 1.6rem;
+  }
+  .banner .right-wrap {
+    margin-left: 0;
+  }
+  .banner .right-wrap .title {
+    font-size: 2rem;
+  }
+  .banner .right-wrap .desc {
+    font-size: 1.6rem;
+    margin-bottom: 18px;
+  }
+  .banner .form-wrap .submit_button {
+    font-size: 1.8rem;
+  }
+  .banner .right-wrap .form-bg {
+    opacity: 1;
+  }
+}
+
 /* banner */
 
 /* Features Section */
@@ -205,51 +256,27 @@ header nav button {
   line-height: 1.7;
   text-align: center;
 }
+@media only screen and (max-width: 1080px) {
+  .features .list-wrap .list-item {
+    max-width: 50%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .features {
+    padding: 60px 0;
+  }
+  .features .list-wrap .list-item {
+    max-width: 100%;
+  }
+  .features .list-wrap .list-item .title {
+    font-size: 1.6rem;
+  }
+  .features .list-wrap .list-item .desc {
+    font-size: 1.4rem;
+    line-height: 1.2;
+  }
+}
 /* Features Section */
-
-/* about Section */
-.about {
-  background: #40413c;
-  padding: 80px 0;
-  color: #fff;
-  margin: 0;
-}
-.about .heading {
-  margin-bottom: 40px;
-}
-.about .content-wrap {
-  display: flex;
-  gap: 20px;
-  width: 100%;
-}
-.about .content-wrap .left-wrap,
-.about .content-wrap .right-wrap {
-  flex: 1 0 auto;
-  max-width: 50%;
-}
-.about .left-wrap {
-  border-radius: 20px;
-  overflow: hidden;
-}
-.about .right-wrap {
-  padding: 0 0 0 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.about .right-wrap .title {
-  font-size: 3.6rem;
-  line-height: 1.2;
-  margin-bottom: 30px;
-  font-family: "poppins-bold", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-}
-.about .right-wrap .desc {
-  font-size: 1.8rem;
-  line-height: 1.5;
-  font-weight: 400;
-}
-/* about Section */
 
 /* Cars Section */
 .cars {
@@ -293,7 +320,92 @@ header nav button {
   margin-bottom: 20px;
   color: #000;
 }
+@media only screen and (max-width: 767px) {
+  .cars {
+    padding: 60px 0;
+  }
+  .cars .sub-heading {
+    margin-bottom: 0;
+  }
+  .cars #controls {
+    margin-bottom: 0;
+    display: none;
+  }
+  .cars .slide .title {
+    font-size: 2rem;
+  }
+}
 /* Cars Section */
+
+/* about Section */
+.about {
+  background: #40413c;
+  padding: 80px 0;
+  color: #fff;
+  margin: 0;
+}
+.about .heading {
+  margin-bottom: 40px;
+}
+.about .content-wrap {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+.about .content-wrap .left-wrap,
+.about .content-wrap .right-wrap {
+  flex: 1 0 auto;
+  max-width: 50%;
+}
+.about .left-wrap {
+  border-radius: 20px;
+  overflow: hidden;
+}
+.about .right-wrap {
+  padding: 0 0 0 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.about .right-wrap .title {
+  font-size: 3.6rem;
+  line-height: 1.2;
+  margin-bottom: 30px;
+  font-family: "poppins-bold", Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
+.about .right-wrap .desc {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  font-weight: 400;
+}
+@media only screen and (max-width: 767px) {
+  .about {
+    padding: 60px 0;
+  }
+  .about .content-wrap {
+    flex-direction: column;
+  }
+
+  .about .content-wrap .left-wrap,
+  .about .content-wrap .right-wrap {
+    flex: 1 0 auto;
+    max-width: 100%;
+  }
+  .about .right-wrap {
+    padding: 0;
+  }
+  .about .right-wrap .title {
+    font-size: 2.6rem;
+    margin-bottom: 20px;
+  }
+  .about .right-wrap .desc {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    font-weight: 400;
+  }
+}
+/* about Section */
 
 /* Footer */
 footer {
@@ -323,4 +435,25 @@ footer .copyright {
   text-align: center;
   font-size: 1.6rem;
   line-height: 1;
+}
+@media only screen and (max-width: 767px) {
+  footer {
+    padding: 20px 0;
+  }
+  footer .container {
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  footer .img-wrap {
+    width: 150px;
+    margin: 0 auto;
+  }
+  footer .right-wrap li {
+    text-align: center;
+  }
+  footer .copyright {
+    font-size: 1.4rem;
+  }
 }
