--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -158,6 +158,7 @@ header nav button {
 .banner .right-wrap .field-block label {
   font-size: 16px;
   line-height: 1.1;
+  text-transform: capitalize;
   color: #000;
 }
 .banner .right-wrap .field-block label span {
@@ -210,6 +211,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 100%;
   padding: 10px;
   font-size: 2.4rem;
+  font-weight: 500;
+  font-family: "poppins-medium", Arial, Helvetica, sans-serif;
   border-radius: 50px;
   background: #529471;
   color: #fff;
@@ -264,6 +267,59 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 /* banner */
+
+  /* accordion */
+  .faq-wrapper {position: relative; padding: 60px 0 60px 0;}
+  .faq-wrapper .heading{margin: 0 0 40px 0;}
+  .faq-wrapper .heading::before {content: ""; width: 67px; height: 4px; background: #ff8600; position: absolute; top: -8px;}
+  .accordion-item {background-color: #fff; border: 1px solid #D9D9D9; border-radius: 16px; margin-bottom: 16px;}
+  .accordion-item .table-data{display: flex;align-items: center; justify-content: space-between;border-bottom: 1px solid #e3dfdf;padding: 10px 0;}
+  .accordion-item .table-data:last-child{border: none;}
+  .accordion-item .table-data p{ font-size: 1.6rem; line-height: 1.1;  color: #081B37;}
+  .accordion-item .table-data p:first-child{margin: 0 10px 0 0;font-weight: 500;font-family: "poppins-medium"; }
+  .accordion-item .accordion-button {background: #fff; cursor: pointer; padding: 16px 40px 16px 16px; width: 100%; text-align: left; outline: none; transition: 0.4s; border-radius: 16px; position: relative; font-size: 18px; line-height: 26px; font-family: "poppins-medium"; font-weight: 500; color: #1B3459;}
+  .accordion-item .accordion-button:after {content: '\002B'; color: #8B94A1; position: absolute; top: 50%; right: 16px; transform: translateY(-50%); font-weight: 400; font-size: 24px; height: 30px;}
+  .accordion-item .accordion-button.active:after {content: "\2212"; color: #8B94A1; font-weight: 400;}
+  .accordion-item .accordion-body {padding: 0 18px; background-color: #fff; max-height: 0; overflow: hidden; border-radius: 16px; transition: max-height 0.2s ease-out; overflow-x: auto;}
+  .accordion-item .accordion-button.active + .accordion-body {margin-bottom: 16px;}
+  .accordion-item .accordion-button .accordion-body {padding: 0;}
+  .faq-wrapper .accordion-item:last-child {margin-bottom: 0;}
+
+ 
+  .faq-wrapper .desc{font-size: 2.2rem;line-height: 1.1;color: #000; text-align: center; margin: 30px 0;}
+  .pricing-cta{max-width: 300px;display: flex;align-items: center;justify-content: center;padding: 16px;  background: #529471;margin: 0 auto;border-radius: 50px;}
+  .pricing-cta .text{font-size: 2.2rem;line-height: 1.1;  font-weight: 500;font-family: "poppins-medium", Arial, Helvetica, sans-serif;color: #fff;}
+   .pricing-cta .arrow-anim-wrapper{position:relative;width:30px;height:26px;overflow: hidden;margin-left: 8px;} 
+   .pricing-cta .arrow {position: absolute;top: 10px;left: 8px;-webkit-animation: slide 1.2s linear infinite; animation: slide 1.2s linear infinite;width: 8px;height: 8px;border: 2px solid;border-color:  white white transparent transparent;transform: translateX(0) rotate(45deg);}
+   .pricing-cta .cta:hover .arrow {border-color: #FFF #FFF transparent transparent; } 
+   .pricing-cta .delay1 {-webkit-animation-delay: 0s;animation-delay: 0s;}
+   .pricing-cta .delay2 {-webkit-animation-delay: 0.4s;animation-delay: 0.4s;}
+   .pricing-cta .delay3 {-webkit-animation-delay: 0.8s;animation-delay: 0.8s;}
+  
+  
+   @media only screen and (max-width: 767px) {
+    .faq-wrapper { padding: 30px 0 60px 0;}
+    .faq-wrapper .heading{margin: 0 0 30px 0;}
+  }
+
+
+  
+  @-webkit-keyframes slide { 
+  0% { opacity:0; transform: translateX(-10px) rotate(45deg); }  
+  20% { opacity:1; transform: translateX(-7px) rotate(45deg); } 
+  50%{opacity: 1;}
+  80% { opacity:1; transform: translateX(7px) rotate(45deg); }  
+  100% { opacity:0; transform: translateX(10px) rotate(45deg); } 
+  } 
+  @keyframes slide {
+  0% { opacity:0; transform: translateX(-10px) rotate(45deg); }  
+  20% { opacity:1; transform: translateX(-7px) rotate(45deg); } 
+  50%{opacity: 1;}
+  80% { opacity:1; transform: translateX(7px) rotate(45deg); }  
+  100% { opacity:0; transform: translateX(10px) rotate(45deg); } 
+  }
+  
+  /* accordion */
 
 /* Features Section */
 .features {
@@ -480,7 +536,7 @@ footer .right-wrap li {
   line-height: 1.2;
   margin-bottom: 10px;
 }
-footer .right-wrap li:hover {
+footer .right-wrap li a:hover {
   text-decoration: underline;
 }
 footer .copyright {
