--- a/assets/css/privacy.css
+++ b/assets/css/privacy.css
@@ -104,7 +104,7 @@ footer .right-wrap li {
   line-height: 1.2;
   margin-bottom: 10px;
 }
-footer .right-wrap li:hover {
+footer .right-wrap li a:hover {
   text-decoration: underline;
 }
 footer .copyright {
