--- a/assets/css/our-pricing.css
+++ b/assets/css/our-pricing.css
@@ -65,6 +65,9 @@ header nav {
     .desc-wrap{margin: 30px 0;}
     .desc-wrap .disclosure{font-size: 2.2rem;line-height: 1.1;font-weight: 500;font-family: "poppins-medium"; color: #081b37;margin: 30px 0;}
     .desc-wrap ol li{font-size: 1.8rem; line-height: 1.1; color: #081b37; margin: 0 0 20px 0; position: relative; padding: 0 0 0 20px;}
+    .desc-wrap ol li span{text-decoration: underline;font-weight: 700;}
+    .desc-wrap ol li .client{margin: 12px 0;display: block;text-decoration: none;}
+    .desc-wrap ol li ol{margin: 20px 0 0 0;}
     .desc-wrap ol li:before { content: ""; width: 6px; height: 6px; background: #000; position: absolute; left: 0; top: 11px; border-radius: 50%; }
     
      @media only screen and (max-width: 767px) {
